@@ -5,6 +5,7 @@ class sqlite:
     headersimport  = ('Host','Port','User','Password','Data')
     headersCheck   = ('Id','Host','Port','User','Password','Data','Status')
     headersJobs    = ('Id','Host','Running','Start Data')
+    headersAgents  = ('Id','Host','Port','Shell','Process')
     createTables   = 'CREATE TABLE IF NOT EXISTS database_bot (id integer PRIMARY KEY AUTOINCREMENT, ipadress text,port text, user text,datestamp text, password text)'
     selectAllBots  = 'SELECT id,ipadress,port,user,password,datestamp FROM database_bot'
     deleteforID     = 'DELETE FROM database_bot WHERE id= {}'
